examples/good/17-return-fun-closure.oo
<(int) : int> multByPlus1Function(int multiplier) {
    int m = multiplier + 1;
    return (int x) : int -> {
        return x * m;
    };
}

<(int) : int> valueTimes5 = multByPlus1Function(4);
print(valueTimes5(7)); // 35
